--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "morgan": "~1.9.1",
-    "node-fetch": "^3.2.6"
+    "request": "^2.88.0"
   }
 }
