--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "morgan": "~1.9.1",
+    "react-router-dom": "^6.3.0",
     "request": "^2.88.0"
   }
 }
