--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "morgan": "~1.9.1",
     "react-router-dom": "^6.3.0",
     "request": "^2.88.0"
+  },
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.8.0"
   }
 }
