--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.2",
     "helmet": "^6.0.0",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "morgan": "~1.9.1",
